#45 Update SerializationTest